# simplypp

./: .clang-format  .clang-tidy  .env  .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  docker.sh  fix_compile_commands.py  format.sh
dockerfiles/: clang.dockerfile  ubuntu-dev.dockerfile
dockerfiles/scripts/: get_clang.sh  get_cmake.sh
elk/: docker-compose.yml
elk/script/data/: battery_simulation.csv  coordinates.csv  fromCSVToBulkJSON.py  fromCSVToBulkJSONLocation.py  generateCSV.py  generateLocationCSV.py  generateNotification.py  generatePowerReadings.py  notification.json  output.json  updates.json
src/: CMakeLists.txt  main.cc
src/algorithm/: AlgorithmInterface.cc  AlgorithmInterface.h  AlgorithmManager.cc  AlgorithmManager.h
src/asdk/generic/: ErrorCodes.cc  ErrorCodes.h
src/communication/: CommunicationInterface.cc  CommunicationInterface.h
src/coroutines/: coroutines.cc  coroutines.h  executables.cc  executables.h  timeout_awaitable.cc  timeout_awaitable.h
src/modules/: math.ixx  numeric.ixx  numeric_impl.cpp
src/proto/: example.proto  message_handler.cc  message_handler.h
src/shapes/: basic_shapes.h  circle.cc  circle.h  shape.h  shape.tpp  square.cc  square.h
src/util/: logging.cc  logging.h
src/video_interfaces/: basic_video_interfaces.h  video_interface.h  video_interface_actions.h
test/: CMakeLists.txt  main.cc
test/algorithm/: algorithm_manager.cc
test/discover_jthread/: test_discover_jthread.cc
test/lib/template/: test_example_class.cc
test/modules/: test_math.cc
test/proto/: test_message_handler.cc
test/shapes/: test_shapes.cc
